# roblox-ai-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/pet-simulator/: README.md  prompt.txt
examples/pet-simulator/Simulator/: ASSET_GUIDE.md  README.md  default.project.json
examples/pet-simulator/Simulator/src/ReplicatedStorage/: Utils.module.lua
examples/pet-simulator/Simulator/src/ServerScriptService/: GameManager.server.lua  LeaderboardService.server.lua  PetService.server.lua  ShopService.server.lua  SimulatorCore.server.lua
examples/pet-simulator/Simulator/src/StarterGui/: HUD.client.lua  LeaderboardGui.client.lua  ShopGui.client.lua
examples/pet-simulator/Simulator/src/StarterPlayerScripts/: UIController.client.lua
examples/zombie-survival/: README.md  prompt.txt
examples/zombie-survival/Survival/: ASSET_GUIDE.md  README.md  default.project.json
examples/zombie-survival/Survival/src/ReplicatedStorage/: Constants.module.lua  Types.module.lua
examples/zombie-survival/Survival/src/ServerScriptService/: CombatService.server.lua  EconomyService.server.lua  InventoryService.server.lua  SurvivalManager.server.lua  WaveManager.server.lua
examples/zombie-survival/Survival/src/StarterGui/: InventoryGui.client.lua  WaveCounter.client.lua
examples/zombie-survival/Survival/src/StarterPlayerScripts/: InputHandler.client.lua
src/roblox_ai_builder/: __init__.py  main.py
src/roblox_ai_builder/core/: game_planner.py  models.py  orchestrator.py  prompt_engine.py
src/roblox_ai_builder/generators/: asset_guide.py  luau_generator.py  system_presets.py  ui_builder.py
src/roblox_ai_builder/utils/: ai_client.py  config.py  errors.py  logger.py
tests/: test_config.py  test_game_planner.py  test_history_manager.py  test_orchestrator.py  test_prompt_engine.py  test_rojo_writer.py  test_system_presets.py  test_ui_builder.py
tests/test_harness/: __init__.py  __main__.py  cli.py  metrics.py  runner.py  test_generation_levels.py  test_prompts.py
